2.14.1
 - fix: perform sanity check for contour spacing before plotting
 - enh: minor optimization of min/max feature algorithm
 - setup: bump dclab to 0.55.6 (new scalar features, dcor access)
2.14.0
 - ref: don't set RTDCBase.identifier to slot identifier
 - setup: drop support for Python 3.8
 - setup: bump dclab from 0.54.2 to 0.55.4 (better DCOR support)
 - build: use Python 3.10 for building executables
2.13.7
 - ci: fix rtd build pipeline
 - setup: bump dclab from 0.52.0 to 0.54.2 (improved basin support)
2.13.6
 - ci: fix Windows build pipeline
2.13.5
 - setup: bump requests to 2.31.0 (CVE-2023-32681)
 - setup: bump scipy to 1.10.0 (CVE-2023-25399)
 - setup: bump dclab from 0.50.4 to 0.52.0
2.13.4
 - tests: fix fake dataset creation
2.13.3
 - fix: casting error when using integer feature for plot color
 - fix: also export logs and tables to .rtdc with prefix "so2exp_"
 - enh: minor minimization in waiting times
 - ref: unify json dumps when saving sessions
 - setup: bump dclab from 0.48.4 to 0.50.4
2.13.2
 - docs: don't build PDF on rtd (failed)
 - setup: bump dclab from 0.48.2 to 0.48.4 (don't load invalid
   inertia ratio data from existing HDF5 files)
2.13.1
 - setup: bump dclab from 0.48.1 to 0.48.2 (improved speed, fixed
   bug with inertia ratio in long channels)
2.13.0
 - feat: support new viscosity model buyukurganci-2022 (#136)
 - enh: increase speed of QuickView event visualization
 - enh: turn on auto-apply in QuickView by default
 - setup: bump dclab from 0.47.2 to 0.48.1
2.12.0
 - feat: allow to disable KDE or use feature data as marker
   hue in QuickView
 - fix: do not perform auto-apply when changing downsampling
   value and downsampling is disabled in QuickView
 - fix: catch IndexError when trying to view an event that is not
   there anymore in polygon-selection-mode in QuickView
 - enh: make auto-apply in QuickView plot settings optional
 - docs: update screenshot scripts
2.11.11