@@ -1,6 +1,7 @@
 2.14.1
  - fix: perform sanity check for contour spacing before plotting
  - enh: minor optimization of min/max feature algorithm
+ - enh: only preselect innate features when computing statistics (#150)
  - setup: bump dclab to 0.55.6 (new scalar features, dcor access)
 2.14.0
  - ref: don't set RTDCBase.identifier to slot identifier
